src/test/ui/keyword/extern/keyword-extern-as-identifier-pat.stderr
error: expected identifier, found keyword `extern`
  --> $DIR/keyword-extern-as-identifier-pat.rs:2:9
   |
LL |     let extern = 0;
   |         ^^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#extern = 0;
   |         ^^^^^^^^

error: aborting due to previous error

